# async-generic

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  deny.toml  release-plz.toml  rustfmt.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  publish.yml  release.yml
macros/: Cargo.toml  README.md
macros/src/: desugar_if_async.rs  lib.rs
tests/: CHANGELOG.md  Cargo.toml
tests/src/: lib.rs
tests/src/tests/fail/: misuse-of-underscore-async.rs  misuse-of-underscore-async.stderr  no-async-fn.rs  no-async-fn.stderr  no-impl.rs  no-impl.stderr  no-macro-args.rs  no-macro-args.stderr  no-struct.rs  no-struct.stderr  no-trait.rs  no-trait.stderr
tests/src/tests/pass/: fun-with-types.rs  generic-fn-with-visibility.rs  generic-fn.rs  struct-method-generic.rs
