[package]
name = "async-generic"
version = "1.1.2"
description = "Write code that can be both async and synchronous without duplicating it."
authors = ["Eric Scouten <git@scouten.me>"]
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/async-generic"
homepage = "https://github.com/scouten/async-generic"
repository = "https://github.com/scouten/async-generic"
readme = "../README.md"
keywords = ["async", "generic", "futures", "macros", "proc_macro"]
edition = "2021"
rust-version = "1.70.0"

[lib]
proc-macro = true

[package.metadata.cargo-udeps.ignore]
development = ["async-std", "async-trait"]

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["visit-mut", "full"] }

[dev-dependencies]
async-std = { version = "1.0", features = ["attributes"] }
async-trait = "0.1"
